# evals_in_langflow

./: .env.example  .gitignore  .pylintrc  LICENSE  README.md  config.py  dataset.py  judge.py  main.py  requirements.txt
arize/: README.md  config.py  dataset.py  judge.py  main.py  requirements.txt
langsmith/: README.md
langsmith/python/: README.md  config.py  dataset.py  judge.py  main.py
langsmith/typescript/: README.md  config.ts  dataset.ts  index.ts  judge.ts  package-lock.json  package.json  tsconfig.json
single_vs_multi_agent/: README.md  __init__.py  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_comparison_tests.sh  run_multi_agent_tests.sh  run_noexp_agent_tests.sh  run_single_agent_tests.sh  run_tests.py  test_quick.py  validate_setup.py
single_vs_multi_agent/tests/: README.md  conftest.py  test_integration.py  test_single_vs_multi_agent.py  test_unit.py
utils/: delete-sessions.py  delete_sessions.py
